objects/vlocity_cmt__VlocityAction__c.object
<CustomObject>
    <fields>
        <fullName>ApplicablePermissionSet__c</fullName>
        <description>Used in the security data model to indicate the API name of the permission set that must be added to a user to enable this vlocity action.</description>
        <label>Applicable Permission Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Permission_Sets</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActionIcon__c</fullName>
        <inlineHelpText>If an image is uploaded here, it will take precedent over the Vlocity Icon. The image will automatically be resized to 22px wide in the Action.</inlineHelpText>
        <label>Custom Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdditionalFilter__c</fullName>
        <label>Additional Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicablePermissionName__c</fullName>
        <label>Applicable Permission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableTypes__c</fullName>
        <label>Applicable Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Symptom__c</fullName>
                </value>
                <value>
                    <fullName>Motive__c</fullName>
                </value>
                <value>
                    <fullName>Service__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableUserProfiles__c</fullName>
        <label>Applicable User Profile</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vlocity Admin</fullName>
                </value>
                <value>
                    <fullName>Vlocity Health</fullName>
                </value>
                <value>
                    <fullName>Vlocity Insurance</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Vlocity Partner Community User</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayLabel__c</fullName>
        <label>Display Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayOn__c</fullName>
        <label>Display On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplaySequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Filter__c</fullName>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InvokeClassName__c</fullName>
        <label>Invocation Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InvokeMethodName__c</fullName>
        <label>Invocation Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSeedAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Seed Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LinkType__c</fullName>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OmniScript</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ConsoleCards</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Layout</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>CommunityUrl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpenURLMode__c</fullName>
        <label>Open URL in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Window</fullName>
                    <default>true</default>
                    <label>Current Window</label>
                </value>
                <value>
                    <fullName>New Tab / Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To State</label>
        <referenceTo>vlocity_cmt__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity Actions</relationshipLabel>
        <relationshipName>Vlocity_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateModelId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Model</label>
        <referenceTo>vlocity_cmt__VlocityStateModel__c</referenceTo>
        <relationshipLabel>Vlocity Actions</relationshipLabel>
        <relationshipName>VlocityActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__URL__c</fullName>
        <label>Target URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UrlParameters__c</fullName>
        <label>URL Parameter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationClassName__c</fullName>
        <label>Validation Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMethodName__c</fullName>
        <label>Validation Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityIcon__c</fullName>
        <defaultValue>&apos;icon-v-document1-line&apos;</defaultValue>
        <inlineHelpText>Choose an icon from the list of icons below the Vlocity Action Detail (will not show up in Vlocity Action Edit) by copying its class name here (i.e. icon-v-document1-line). Use attachment to load custom image.</inlineHelpText>
        <label>Vlocity Icon</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Action</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__AdditionalFilter__c</columns>
        <columns>ApplicablePermissionSet__c</columns>
        <columns>vlocity_cmt__InvokeClassName__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__DisplaySequence__c</columns>
        <columns>vlocity_cmt__InvokeMethodName__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__ValidationClassName__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vlocity Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>